prevent doc title overflow into search

--- a/themes/aframe/source/css/search.styl
+++ b/themes/aframe/source/css/search.styl
@@ -17,7 +17,7 @@
     padding 0 5px 0 10px
     width 100%
     +media--desktop()
-        width 300px
+        width 240px
 
 [data-is-ios="true"] #search
     padding-bottom 7px
